--- a/base.css
+++ b/base.css
@@ -20,11 +20,11 @@ body {
 }
 .menu {
     width: 15%;
-    background-color: aqua;
+    background-color: rgb(159, 214, 146);
     padding: 10px 20px 0px;
 }
 .header {
-    background-color: rgb(5, 108, 108);
+    background-color: rgba(90, 31, 3, 0.712);
     min-height: 150px;
 }
 .content {
@@ -33,6 +33,6 @@ body {
     padding: 20px;
 }
 .footer {
-    background-color: rgb(99, 56, 240);
-    min-height: 150px;
+    background-color: rgb(228, 211, 189);
+    min-height: 100px;
 }
